--- a/dataverse-webapp/src/main/webapp/dataverse-textMessages.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse-textMessages.xhtml
@@ -147,7 +147,7 @@
                                     <p:commandButton value="#{bundle['dataversemessages.textmessages.deactivate']}"
                                                      style="margin-right:10px;"
                                                      rendered="#{banner.active}"
-                                                     action="#{BannerTab.deactivateTextMessage(banner.id)}"
+                                                     action="#{BannerTab.deactivateBanner(banner.id)}"
                                                      update="@form"/>
 
                                     <p:commandButton value="#{bundle['dataversemessages.textmessages.reuse']}"
