--- a/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
@@ -314,16 +314,16 @@
                     </div>   
                 </ui:fragment>
 
-                <ui:repeat value="#{SearchIncludeFragment.filterQueries}" var="filterQuery" rendered="#{!SearchIncludeFragment.wasSolrErrorEncountered()}">
-                    <ui:param name="friendlyNames" value="#{SearchIncludeFragment.getFriendlyNamesFromFilterQuery(filterQuery)}"/>
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetLink facetSelected" rendered="#{not empty friendlyNames}">
-                        <h:outputText value="#{friendlyNames.get(0)}: " escape="false"/>
-                        <h:outputText value="#{friendlyNames.get(1)} " />
+                <ui:repeat value="#{SearchIncludeFragment.responseFilterQueries}" var="filterQuery" rendered="#{!SearchIncludeFragment.wasSolrErrorEncountered()}">
+
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetLink facetSelected" rendered="#{filterQuery.hasFriendlyNameAndValue()}">
+                        <h:outputText value="#{filterQuery.friendlyFieldName}: " escape="false"/>
+                        <h:outputText value="#{filterQuery.friendlyFieldValue} " />
                         <h:outputText styleClass="sr-only" value=" #{bundle['dataverse.search.filters.remove.screenReaderPostfix']}" />
                         <span class="glyphicon glyphicon-remove"></span>
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
-                            <f:param name="fq#{status.index}" value='#{clickedFilterQuery}' disable="#{clickedFilterQuery == filterQuery}"/>
+                            <f:param name="fq#{status.index}" value='#{clickedFilterQuery}' disable="#{clickedFilterQuery == filterQuery.query}"/>
                         </c:forEach>
                         <f:param name="types" value="#{SearchIncludeFragment.selectedTypesString}"/>
                         <f:param name="sort" value="#{SearchIncludeFragment.sortField}"/>
