--- a/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
@@ -322,8 +322,8 @@
                         <h:outputText styleClass="sr-only" value=" #{bundle['dataverse.search.filters.remove.screenReaderPostfix']}" />
                         <span class="glyphicon glyphicon-remove"></span>
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
-                        <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
-                            <f:param name="fq#{status.index}" value='#{clickedFilterQuery}' disable="#{clickedFilterQuery == filterQuery.query}"/>
+                        <c:forEach items="#{SearchIncludeFragment.responseFilterQueries}" var="clickedFilterQuery" varStatus="status">
+                            <f:param name="fq#{status.index}" value='#{clickedFilterQuery.query}' disable="#{clickedFilterQuery.query == filterQuery.query}"/>
                         </c:forEach>
                         <f:param name="types" value="#{SearchIncludeFragment.selectedTypesString}"/>
                         <f:param name="sort" value="#{SearchIncludeFragment.sortField}"/>
