--- a/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
@@ -143,7 +143,7 @@
                                 <!-- must be disabled once that one upload is complete. So, again, -->
                                 <!-- please make sure that part is working if you have to make any -->
                                 <!-- changes to this part of the fragment. -->
-
+<ui:debug />
                                 <p:fileUpload id="fileUpload"
                                               class="#{lockedFromEdits || fileUploadDisabled ? 'disabled' : ''}"
                                               dragDropSupport="true"
@@ -154,7 +154,7 @@
                                               process="filesTable"
                                               update=":datasetForm:filesTable, @([id$=filesButtons])"
                                               label="#{bundle['file.selectToAddBtn']}"
-                                              oncomplete="uploadFinished();"
+                                              oncomplete="uploadFinished(PF('fileUploadWidget'));"
                                               onstart="javascript:uploadWidgetDropRemoveMsg();uploadStarted();"
                                               onerror="javascript:uploadFailure();"
                                               sizeLimit="#{EditDatafilesPage.getMaxFileUploadSizeInBytes()}"
