--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -14,6 +14,8 @@
 <!--@elvariable id="dataverseLk" type="edu.harvard.iq.dataverse.persistence.dataverse.Dataverse"-->
 <!--@elvariable id="DatasetPage" type="edu.harvard.iq.dataverse.DatasetPage"-->
 
+<h:head>
+</h:head>
 <h:body>
     <ui:composition template="/dataverse_template.xhtml">
         <ui:param name="pageTitle"
